--- a/listproject/.project
+++ b/listproject/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>listproject</name>
+	<name>collection_list_set_project</name>
 	<comment></comment>
 	<projects>
 	</projects>
